package it.polimi.ingsw.socket;

import it.polimi.ingsw.updater.GameUpdater;

//TODO: Not sure this is necessary
public interface SocketGameUpdater extends GameUpdater {
}
